# cachey

./: .gitignore  Cargo.toml  README.md  cachey.service
.github/workflows/: release.yml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
src/: client.rs  main.rs  server.rs
