[package]
name = "cachey"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.32", features = ["fs", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
num_cpus = "1.16.0"

[dev-dependencies]
tempfile = "3.8"
