[package]
name = "cachey"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
num_cpus = "1.16.0"
anyhow = "1.0"
bytes = "1.5"
clap = { version = "4.5.23", features = ["derive", "cargo"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["fs", "io-util", "rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.8"
