[package]
name = "cachey"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
num_cpus = "1.16.0"
anyhow = "1.0"
clap = { version = "4.5.23", features = ["derive", "cargo"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["fs", "io-util", "rt", "macros", "rt-multi-thread"] }
chrono = "0.4.39"
log = "0.4.22"
env_logger = "0.11.6"

[dev-dependencies]
tempfile = "3.8"
