[package]
name = "cachey-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.5"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["fs", "io-util", "rt", "macros"] }

[dev-dependencies]
tempfile = "3.8"
