[package]
name = "cachey-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.5"
clap = { version = "4.5.23", features = ["derive", "cargo"] }
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["fs", "io-util", "rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.8"
